--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,33 @@
+aio-pika==9.5.5
+aiormq==6.8.1
 annotated-types==0.7.0
 anyio==4.9.0
+certifi==2025.6.15
 click==8.2.1
 colorama==0.4.6
+exceptiongroup==1.3.0
+fast-depends==2.4.12
 fastapi==0.115.14
+faststream==0.5.44
 greenlet==3.2.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+multidict==6.6.3
+pamqp==3.3.0
+plyer==2.1.0
+propcache==0.3.2
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic-core==2.33.2
 python-dotenv==1.1.1
+python-telegram-bot==22.2
 sniffio==1.3.1
 sqlalchemy==2.0.41
 starlette==0.46.2
 typing-extensions==4.14.1
 typing-inspection==0.4.1
 uvicorn==0.35.0
+websockets==15.0.1
+yarl==1.20.1
