--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ propcache==0.3.2
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic-core==2.33.2
+pydantic-settings==2.10.1
 python-dotenv==1.1.1
 python-telegram-bot==22.2
 sniffio==1.3.1
