--- a/desktop_ui/package.json
+++ b/desktop_ui/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron:start": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:start": "concurrently \"cross-env BROWSER=none PORT=3064 npm start\" \"wait-on http://localhost:3064 && cross-env ELECTRON_START_URL=http://localhost:3064 electron .\"",
     "electron:build": "npm run build && electron-builder"
   },
   "eslintConfig": {
